--- a/index.html
+++ b/index.html
@@ -1,16 +1,8 @@
 
-<div id="fb-root"></div>
-<div class="header__holder--redesigned" data-is-article="0">
-<div class="Header-PullReload">
-    <div class="Header-PullReload-Bg"></div>
-    <div class="Header-PullReload-Loader"></div>
-</div>
-</div>
-<div class="header--redesigned" data-header>
-<nav class="header" data-is-article="0">
-    <div class="header__top-wrap" data-header-top>
-        <div class="header__top">
-            <div class="header__top-projects">
+<nav>
+    <div>
+        <div>
+            <div>
                 <ul>
                     <li><a href="https://refresher.sk/benefity">Benefity</a></li>
                     <li><a href="https://refresher.sk/filmy-a-serialy/databaza">Filmová databáza</a></li>
@@ -20,7 +12,7 @@
                     <li><a href="https://blog.refresher.sk">Blog</a></li>
                 </ul>
             </div>
-            <div class="header__top-miscellaneous">
+            <div>
                 <ul>
                     <li><a href="https://onas.refresher.sk">O nás</a></li>
                     <li><a href="https://onas.refresher.sk/kariera">Kariéra</a></li>
@@ -29,144 +21,108 @@
             </div>
         </div>
     </div>
-    <div class="header__mid" data-header-mid>
-        <div class="header__mid-categories">
-            <div class="header__mid-categories-button icon icon-menu" data-header-menu-button-desktop></div>
-        </div>
-        <div class="header__mid-subscribe"><a href="https://refresher.sk/plus">Predplať si <b>refresher+</b></a>
-        </div>
-        <div class="header__mid-logo"><a href="https://refresher.sk/" title="Refresher logo"><i
-                    class="icon icon-refresher-badge"></i></a></div>
-        <div class="header__mid-hotkeys">
-            <a href="https://news.refresher.sk/" data-modal-open="project_switch_news" title="PREJSŤ NA NEWS"><i
-                    class="icon icon-refresher-news-badge"></i></a>
-            <a href="https://refresher.sk/vyhladavanie" title="Vyhľadávanie" class="header__search-button"><i
-                    class="icon icon-search"></i></a>
-            <i class="icon icon-color-scheme-dark d-none d-xl-block"
-                data-menu-dropdown-button="color-scheme"></i>
-            <i class="header__mid-hotkeys__avatar d-none d-xl-none" data-header-menu-profile-button><img src
-                    alt="avatar"></i>
-            <i class="header__mid-hotkeys__avatar d-none " data-menu-dropdown-button="profile-crossroad"><img
-                    src alt="avatar"></i>
-            <a href="https://refresher.sk/login" class title="Prihlásiť sa"><i
-                    class="icon icon-profile"></i></a>
-            <i class="icon icon-menu d-xl-none" data-header-menu-button-mobile></i>
-        </div>
-        <div class="header__dropdown" data-menu-dropdown="color-scheme">
-            <div class="header__dropdown-wrap">
-                <div class="header__dropdown-item" data-color-scheme="light"><i
-                        class="icon icon-color-scheme-light"></i>
-                    <div>Svetlý režim</div>
-                </div>
-                <div class="header__dropdown-item" data-color-scheme="dark"><i
-                        class="icon icon-color-scheme-dark"></i>
-                    <div>Tmavý režim</div>
-                </div>
-                <div class="header__dropdown-item" data-color-scheme="auto"><i
-                        class="icon icon-color-scheme-device-mobile"></i>
-                    <div>Podľa zariadenia</div>
-                </div>
-            </div>
-        </div>
-        <div class="header__dropdown" data-menu-dropdown="profile-crossroad">
-            <div class="header__dropdown-wrap">
-                <div class="profile-crossroad">
-                    <div class="profile-crossroad-wrap">
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div>
     </div>
-    <div class="header__bottom-wrap" data-nav-slider data-header-bottom>
+    <div>
         <div>
-            <div class="header__bottom header__bottom--mobile">
-                <div class="header__bottom-link header__bottom-link--dropdown" data-modal-open="categories">
-                    Kategórie</div>
-                <div class="header__bottom-link header__bottom-link--dropdown" data-modal-open="topics">Témy
-                </div>
-                <div class="header__bottom-link header__bottom-link--dropdown" data-modal-open="latest">
+            <div>
+                <div>Kategórie</div>
+                <div>Témy</div>
+                <div class="header__bottom-link--dropdown" data-modal-open="latest">
                     Najnovšie</div>
-                <div class="header__bottom-link header__bottom-link--dropdown" data-modal-open="most-read">
+                <div class="header__bottom-link--dropdown" data-modal-open="most-read">
                     Najčítanejšie</div>
-                <a href="https://refresher.sk/video" class="header__bottom-link">Video</a>
-                <a href="https://refresher.sk/kvizy" class="header__bottom-link">Kvízy</a>
-                <a href="https://refresher.sk/podcasty" class="header__bottom-link">Podcasty</a>
-                <a href="https://refresher.sk/refresher/rozhovory" class="header__bottom-link">Rozhovory</a>
+                <a href="https://refresher.sk/video">Video</a>
+                <a href="https://refresher.sk/kvizy">Kvízy</a>
+                <a href="https://refresher.sk/podcasty">Podcasty</a>
+                <a href="https://refresher.sk/refresher/rozhovory">Rozhovory</a>
             </div>
-            <div class="header__bottom header__bottom--desktop h-scroll" data-nav-slider-scroll>
-                <a href="https://refresher.sk/hudba" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #FF65C0;"></span>Hudba
+            <div>
+                <a href="https://refresher.sk/hudba">
+                    Hudba
                 </a>
-                <a href="https://refresher.sk/moda" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #EE8B34;"></span>Móda
+                <a href="https://refresher.sk/moda">
+                    Móda
                 </a>
-                <a href="https://refresher.sk/filmy-a-serialy" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #C7A700;"></span>Filmy a
+                <a href="https://refresher.sk/filmy-a-serialy">
+                    Filmy a
                     Seriály
                 </a>
-                <a href="https://refresher.sk/tech" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #1CDCB1;"></span>Tech
+                <a href="https://refresher.sk/tech">
+                    Tech
                 </a>
-                <a href="https://refresher.sk/zaujimavosti" class="header__bottom-link">
-                    <span class="header__bottom-link--color"
-                        style="background-color: #FF65C0;"></span>Zaujímavosti
+                <a href="https://refresher.sk/zaujimavosti">
+                    Zaujímavosti
                 </a>
-                <a href="https://refresher.sk/kultura" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #AE83FF;"></span>Kultúra
+                <a href="https://refresher.sk/kultura">
+                    Kultúra
                 </a>
-                <a href="https://refresher.sk/gastro" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #2EE451;"></span>Gastro
+                <a href="https://refresher.sk/gastro">
+                    Gastro
                 </a>
-                <a href="https://refresher.sk/sport" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #34C4F1;"></span>Šport
+                <a href="https://refresher.sk/sport">
+                    Šport
                 </a>
-                <a href="https://refresher.sk/refresher" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #9E9E9E;"></span>Refresher
+                <a href="https://refresher.sk/refresher">
+                    Refresher
                 </a>
-                <a href="https://refresher.sk/historia" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #AD5B0F;"></span>História
+                <a href="https://refresher.sk/historia">
+                    História
                 </a>
-                <a href="https://refresher.sk/osobnosti" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #1194F2;"></span>Osobnosti
+                <a href="https://refresher.sk/osobnosti">
+                    Osobnosti
                 </a>
-                <a href="https://refresher.sk/zdravie" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #9AC000;"></span>Zdravie
+                <a href="https://refresher.sk/zdravie">
+                    Zdravie
                 </a>
-                <a href="https://refresher.sk/politika" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #990000;"></span>Politika
+                <a href="https://refresher.sk/politika">
+                    Politika
                 </a>
-                <div class="header__bottom-link-divider"></div>
-                <a href="https://refresher.sk/tema/kviz" class="header__bottom-link">Kvíz</a>
-                <a href="https://refresher.sk/tema/influenceri" class="header__bottom-link">Influenceri</a>
-                <a href="https://refresher.sk/tema/marvel" class="header__bottom-link">Marvel</a>
-                <a href="https://refresher.sk/tema/soubiznis" class="header__bottom-link">Šoubiznis</a>
-                <a href="https://refresher.sk/tema/vianoce" class="header__bottom-link">Vianoce</a>
-                <a href="https://refresher.sk/tema/svet-marvelu" class="header__bottom-link">Marvel filmy a
-                    seriály</a>
-                <a href="https://refresher.sk/tema/reklamy-a-marketing" class="header__bottom-link">Reklamy a
-                    marketing</a>
-                <a href="https://refresher.sk/tema/filmy-a-serialy" class="header__bottom-link">Filmy a
-                    seriály</a>
-                <div class="header__bottom-link-divider"></div>
-                <div class="header__bottom-link header__bottom-link--label">News</div>
-                <a href="https://news.refresher.sk/slovensko" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #E01C1C;"></span>Slovensko
+                <div class="divider"></div>
+                <a href="https://refresher.sk/tema/kviz">
+                    Kvíz
+                </a>
+                <a href="https://refresher.sk/tema/influenceri">
+                    Influenceri
+                </a>
+                <a href="https://refresher.sk/tema/marvel">
+                    Marvel
+                </a>
+                <a href="https://refresher.sk/tema/soubiznis">
+                    Šoubiznis
+                </a>
+                <a href="https://refresher.sk/tema/vianoce">
+                    Vianoce
+                </a>
+                <a href="https://refresher.sk/tema/svet-marvelu">
+                    Marvel filmy a seriály
+                </a>
+                <a href="https://refresher.sk/tema/reklamy-a-marketing">
+                    Reklamy a marketing
+                </a>
+                <a href="https://refresher.sk/tema/filmy-a-serialy">
+                    Filmy a seriály
+                </a>
+                <div>
+                    News
+                </div>
+                <a href="https://news.refresher.sk/slovensko">
+                    Slovensko
                 </a>
                 <a href="https://news.refresher.sk/zahranicie" class="header__bottom-link">
-                    <span class="header__bottom-link--color"
-                        style="background-color: #DE8500;"></span>Zahraničie
+                    Zahraničie
                 </a>
                 <a href="https://news.refresher.sk/ekonomika" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #AC1BC3;"></span>Ekonomika
+                    Ekonomika
                 </a>
                 <a href="https://news.refresher.sk/komentare" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #579C00;"></span>Komentáre
+                    Komentáre
                 </a>
                 <a href="https://news.refresher.sk/rozhovory" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #008970;"></span>Rozhovory
+                    Rozhovory
                 </a>
                 <a href="https://news.refresher.sk/reportaze" class="header__bottom-link">
-                    <span class="header__bottom-link--color" style="background-color: #0C7ACA;"></span>Reportáže
+                    Reportáže
                 </a>
                 <div class="header__bottom-link-divider"></div>
                 <a href="https://refresher.sk/tema/vlada-roberta-fica" class="header__bottom-link">Vláda Roberta
@@ -429,3 +385,8 @@
                                 class="header__menu-category-li-a">Reklama</a></li>
                     </ul>
                 </div>
+                <div class="project-switch__button">
+                    <a href="https://news.refresher.sk/" class="btn btn-primary btn-icon"><span>PREJSŤ NA NEWS</span>
+                        <i class="icon-caret-right"></i></a>
+                </div>
+                <div class="project-switch__info">Kliknutím na tlačidlo ťa presmerujeme na news.refresher.sk</div>
